test/libsolidity/syntaxTests/literalSuffixes/parsing/invalid_suffix_on_state_variable.sol
contract C {
    uint suffix a;
}
// ----
// ParserError 2314: (29-30): Expected ';' but got identifier
